Break spacing into variables to avoid breaking social bar again

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -607,7 +607,8 @@ small {
 .pagination {
   width: 60%;
   position: relative;
-  margin: 0 auto 10rem;
+  margin: 0 auto;
+  margin-bottom: 9.2rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
