--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -22,3 +22,8 @@ $color-white: #e9e9e9;
 // Font stacks for easier changes
 $sans: 'Oswald', sans-serif;
 $serif: 'Droid Serif', serif;
+
+// Measurements for absolute positioning
+$footer-height: 4rem;
+$social-icon-size: 2.4rem;
+$social-padding: 1.4rem;
