--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -5,7 +5,7 @@
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	height: 4rem;
+	height: $footer-height;
 	background-color: $color-primary;
 	color: $color-black;
 	padding: 1rem;
