--- a/sass/partials/_pagination.scss
+++ b/sass/partials/_pagination.scss
@@ -1,7 +1,8 @@
 .pagination {
 	width: 60%;
 	position: relative;
-  margin: 0 auto 10rem;
+	margin: 0 auto;
+	margin-bottom: $footer-height + $social-icon-size + (2 * $social-padding);
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
